--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @questions.each do |question| %>
-    <li><%= question.text %></li>
+    <li><%= link_to question.text, question_path(question), class: "question" %></li>
   <% end %>
 </ul>
 
