--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,5 +1,13 @@
-<h1>Question:</h1>
+<h1>Question: <%= @question.text %></h1>
 
-<h4><%= @question.text %></h4>
+<h4>Answers:</h4>
+
+<ul>
+  <% @question.answers.each do |answer| %>
+    <li><%= answer.text %></li>
+  <% end %>
+</ul>
 
 <%= link_to "Answer Question", new_question_answer_path(@question) %>
+
+<% console %>
