Associate users to answers and questions, add user_id to answers table, specs passing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-  <%= flash[:notice] %>
-  <%= flash[:alert] %>
 
-<%= yield %>
+  <div class="container">
+    <%= flash[:notice] %>
+    <%= flash[:alert] %>
+    <%= yield %>
+  </div>
 
 </body>
 </html>
