--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,28 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <ul class="nav navbar-nav">
+        <li><%= link_to "Home", root_path %></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+        <li><%= link_to current_user.email + " sign out", log_out_path %></li>
+        <% else %>
+        <li><%= link_to "Create user", new_user_path %></li>
+        <li><%= link_to "Sign in", log_in_path %></li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 
+  <div class="jumbotron">
+    <div class="container">
+      <h1>Shtack Shtoverflow</h1>
+    </div>
+
+  </div>
   <div class="container">
     <%= flash[:notice] %>
     <%= flash[:alert] %>
