Hide post buttons when logged out

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,4 +8,6 @@
   <% end %>
 </ul>
 
-<%= link_to "Answer Question", new_question_answer_path(@question) %>
+<% if current_user.nil? == false %>
+  <%= link_to "Answer Question", new_question_answer_path(@question) %>
+<% end %>
