--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -6,4 +6,6 @@
   <% end %>
 </ul>
 
-<%= link_to "Ask Question", new_question_path %>
+<% if current_user.nil? == false %>
+  <%= link_to "Ask Question", new_question_path %>
+<% end %>
